ajoutdelapage carré+modifderiv

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<a href="soustractions.html">Soustraction</a>
 		<a href="multiplication.html">Multiplication</a>
 		<a href="division.html">Division</a>
+		<a href="carre.html">Carrés</a>
 		<a href="racines.html">Racines carrées</a>
 		<a href="Simplification.html">Simplifications d'expressions</a>
 		<a href="graphe.html">Graphes</a>
