--- a/carre.html
+++ b/carre.html
@@ -8,6 +8,7 @@
 	<link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
 	<link rel="stylesheet" href="additions.css">
 	<link rel="stylesheet" href="all.css">
+	<link rel="stylesheet" href="10exp.css">
 	<!-- KaTeX -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
 		integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+" crossorigin="anonymous">
@@ -27,7 +28,7 @@
 	<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
 		double_arrow
 	</a>
-	<h1>Les additions</h1>
+	<h1>Les carrés</h1>
 	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître votre résultat.</p>
 	<button onclick="generer()" type="button"> Générer des carrés aléatoires </button>
 
