--- a/racines.html
+++ b/racines.html
@@ -57,21 +57,21 @@
 
 	<!--code pour faire un tableau trouvé sur https://developer.mozilla.org/fr/docs/Web/HTML/Element/table-->
 	<table>
-		<caption>
-		  Chiffre des unités de X en fonction de X²
+		<caption> <!--le titre -->
+		  Chiffre des unités de X en fonction de celui de X²
 		</caption>
 		<thead>
 		  	<tr>
-				<th scope="col">Chiffre des unités de X²</th>
-				<th scope="col">Chiffre des unités de X si entre 10k et 10k+5 </th>
-				<th scope="col">Chiffre des unités de X si entre 10k+5 et 10k+10</th>
+				<th scope="col">Chiffre des unités de X²</th><!--colonne 1 -->
+				<th scope="col">Chiffre des unités de X si entre 10k et 10k+5 </th><!--colonne 2 -->
+				<th scope="col">Chiffre des unités de X si entre 10k+5 et 10k+10</th><!--colonne 3 -->
 		  	</tr>
 		</thead>
-		<tbody>
-		  	<tr>
-				<th scope="row"> 0</th>
-				<td>0</td>
-				<td>0</td>
+		<tbody> <!--contenu du tableau (pas la première ligne donc) -->
+		  	<tr> <!--une ligne -->
+				<th scope="row"> 0</th>  <!--1ere case -->
+				<td>0</td> <!--2eme case-->
+				<td>0</td> <!--3eme case -->
     		</tr>
    			<tr>
      			<th scope="row">1</th>
@@ -122,7 +122,7 @@
 	</table>
 	<p>Lorsqu'il n'y a pas de solution, cela signifie que X² ne peut finir par le nombre en question.</p>
 
-	<p> Ainsi, il suffit d'encadrer X par deux carrés "sympas" et retrouver son chiffre des unités. Si vous ne savez pas comment calculer des carrés d'entiers sympas, vous pouvez regarder la page sur les <a href> carrés de nombre</a>. </p>
+	<p> Ainsi, il suffit d'encadrer X par deux carrés "sympas" et retrouver son chiffre des unités. Si vous ne savez pas comment calculer des carrés d'entiers sympas, vous pouvez regarder la page sur les <a href="carre.html"> carrés de nombre</a>. </p>
 
 </body>
 
