rajoutdelaligne 10xep.css

--- a/Simplification.html
+++ b/Simplification.html
@@ -6,6 +6,7 @@
 	<title>Alléger sa surcharge</title>
 	<!-- <link rel="stylesheet" href="simplifi.css"> -->
 	<link rel="stylesheet" href="all.css">
+	<link rel="stylesheet" href="10exp.css">
 	<!-- KaTeX -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.16.11/dist/katex.min.css"
 		integrity="sha384-nB0miv6/jRmo5UMMR1wu3Gz6NLsoTkbqJghGIsx//Rlm+ZU03BU6SQNC66uf4l5+" crossorigin="anonymous">
