--- a/multiplication.html
+++ b/multiplication.html
@@ -31,12 +31,13 @@
 		double_arrow
 	</a>
 	<h1>Les multiplications</h1>
-	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître votre résultat.</p>
+	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître
+		votre résultat.</p>
+	<button onclick="generer()" type="button"> Générer des multiplications aléatoires </button>
 	<div class="bts">
 		<button onclick="left()">Calcul précédent</button>
 		<button onclick="right()">Calcul suivant</button>
 	</div>
-	<button onclick="generer()" type="button"> Générer des multiplications aléatoires </button>
 	<div class="insParent">
 		<div id="inserting">
 			<!-- ici viendront multipli -->
