--- a/Additions.html
+++ b/Additions.html
@@ -37,8 +37,10 @@
 		<button onclick="right()">Scroll right</button>
 	</div>
 
-	<div id="inserting">
-		<!-- ici viendront les additions -->
+	<div class="insParent">
+		<div id="inserting">
+			<!-- ici viendront les additions -->
+		</div>
 	</div>
 
 	<button class="bouton" type="button" onclick="score()"> Voir son score </button>
