refactoring code + adding correct favicons

--- a/Simplification.html
+++ b/Simplification.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Alléger sa surcharge</title>
-	<!-- <link rel="stylesheet" href="simplifi.css"> -->
+	<link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+	<link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
 	<link rel="stylesheet" href="all.css">
 	<link rel="stylesheet" href="10exp.css">
 	<link rel="stylesheet" href="h3.css">
