--- a/soustractions.html
+++ b/soustractions.html
@@ -4,6 +4,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>sus-tractions</title>
+	<link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+	<link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
 	<link rel="stylesheet" href="soustractions.css">
 	<link rel="stylesheet" href="all.css">
 	<link rel="stylesheet" href="10exp.css">
