--- a/racines.html
+++ b/racines.html
@@ -3,6 +3,8 @@
 
 <head>
 	<meta charset="UTF-8">
+	<link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon" media="(prefers-color-scheme: light)">
+	<link rel="shortcut icon" href="assets/favicon-dark.png" type="image/x-icon" media="(prefers-color-scheme: dark)">
 	<title>L'histoire d'un arbre</title>
 	<link rel="stylesheet" href="racines.css">
 	<link rel="stylesheet" href="all.css">
