better header: home btn and title aligned

--- a/derivation.html
+++ b/derivation.html
@@ -31,7 +31,7 @@
 			double_arrow
 		</a>
 		<h1>La dérivation</h1>
-		<div></div>
+		<div class="fill"></div>
 	</div>
 
 	<button onclick="generer()" type="button"> Générer des fonctions à chavirer</button>
