--- a/graphe.html
+++ b/graphe.html
@@ -29,10 +29,13 @@
 </head>
 
 <body>
-	<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
-		double_arrow
-	</a>
-	<h1>Reconnaissance de courbes affines</h1>
+	<div class="header">
+		<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
+			double_arrow
+		</a>
+		<h1>Reconnaissance de courbes affines</h1>
+		<div class="fill"></div>
+	</div>
 	<p>Appuyez sur le bouton pour générer des courbes affines à identifier.</p>
 	<button onclick="generer()" type="button"> Générer des courbes de fonctions affines </button>
 	<div id="insertinggraphe">
