--- a/primitive.html
+++ b/primitive.html
@@ -24,11 +24,13 @@
 </head>
 
 <body>
-	<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
-		double_arrow
-	</a>
-	<h1>Trouver une primitive (avec constante nulle)</h1>
-
+	<div class="header">
+		<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
+			double_arrow
+		</a>
+		<h1>Trouver une primitive (avec constante nulle)</h1>
+		<div class="fill"></div>
+	</div>
 	<button onclick="generer()" type="button"> Générer des fonctions à primitiver</button>
 	<button onclick="latex()" type="button"> Afficher le Latex</button>
 	<div id="inserting">
