--- a/Additions.html
+++ b/Additions.html
@@ -25,10 +25,13 @@
 </head>
 
 <body>
-	<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
-		double_arrow
-	</a>
-	<h1>Les additions</h1>
+	<div class="header">
+		<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
+			double_arrow
+		</a>
+		<h1>Les additions</h1>
+		<div class="fill"></div>
+	</div>
 
 	<button onclick="generer()" type="button"> Générer des additions aléatoires </button>
 
