--- a/Simplification.html
+++ b/Simplification.html
@@ -26,11 +26,16 @@
 </head>
 
 <body>
-	<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
-		double_arrow
-	</a>
-	<h1>Simplifications d'expressions</h1>
-	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître votre résultat.</p>
+	<div class="header">
+		<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
+			double_arrow
+		</a>
+		<h1>Simplifications d'expressions</h1>
+		<div class="fill"></div>
+	</div>
+
+	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître
+		votre résultat.</p>
 	<button onclick="generer()" type="button"> Générer des expressions aléatoires </button>
 	<div class="bts">
 		<button onclick="left()">Calcul précédent</button>
@@ -51,22 +56,27 @@
 
 	<h2>Tips & Tricks</h2>
 	<p> Voir ce qui peut se simplifier <br> S'accrocher</p>
-	
+
 	<h2> Pour aller plus loin</h2>
 	<h3> Critère de divisiblité par 3 et 9</h3>
-	<p>L'énoncé de ce critère est le suivant : si la somme des chiffres d'un nombre est divisible par 9, alors ce nombre est divisible par 9. Ceci est utile, puisque l'on sait alors qu'on peut simplifier par 9 le nombre dans la racine. 
+	<p>L'énoncé de ce critère est le suivant : si la somme des chiffres d'un nombre est divisible par 9, alors ce nombre
+		est divisible par 9. Ceci est utile, puisque l'on sait alors qu'on peut simplifier par 9 le nombre dans la
+		racine.
 		<br> Un énoncé similaire est vrai pour 3, ce qui peut permettre de simplifier des fractions également.
 	</p>
 	<h3> Critère de divisibilité par 5 et 25</h3>
-	<p> L'énoncé de ce critère : Un nombre est divisible par 5 s'il finit par 0 ou 5. <br> 
-	Pour 25, si le nombre se finit par 00, 25, 50, ou 75, alors il est divisible par 25.</p>
-	<p> Ceci permet de vérifier si on peu sortir 25 d'une racine, ou s'il est possible de simplifier par 5 dans des fractions.</p>
+	<p> L'énoncé de ce critère : Un nombre est divisible par 5 s'il finit par 0 ou 5. <br>
+		Pour 25, si le nombre se finit par 00, 25, 50, ou 75, alors il est divisible par 25.</p>
+	<p> Ceci permet de vérifier si on peu sortir 25 d'une racine, ou s'il est possible de simplifier par 5 dans des
+		fractions.</p>
 
 	<h3>Critère de divisibilité par 2,4 et 8</h3>
-	<p> L'énoncé de ces crtières : 
+	<p> L'énoncé de ces crtières :
 		<br> - Un nombre est divisible par 2 s'il finit 0,2,4,6 ou 8.
-		<br> - Un nombre est divisible par 4 si ses deux derniers chiffres forment un nombre divisible par 4. Par exemple, 2776 est divisible par 4 car 76 l'est.
-		<br> - un nombre est divisible par 8 si ses trois derniers chiffres forment un nombre divisible par 8. Par exemple, 2776 n'est pas divisible par 8, car 776 ne l'est pas. <br>
+		<br> - Un nombre est divisible par 4 si ses deux derniers chiffres forment un nombre divisible par 4. Par
+		exemple, 2776 est divisible par 4 car 76 l'est.
+		<br> - un nombre est divisible par 8 si ses trois derniers chiffres forment un nombre divisible par 8. Par
+		exemple, 2776 n'est pas divisible par 8, car 776 ne l'est pas. <br>
 		<br> Ceci permet de sortir un 4 d'une racine, ou de simplifier par 2 des fractions.
 	</p>
 
