--- a/division.html
+++ b/division.html
@@ -27,10 +27,14 @@
 </head>
 
 <body>
-	<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
-		double_arrow
-	</a>
-	<h1>Les divisions</h1>
+	<div class="header">
+		<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
+			double_arrow
+		</a>
+		<h1>Les divisions</h1>
+		<div class="fill"></div>
+	</div>
+
 	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître votre résultat.</p>
 	<button onclick="generer()" type="button"> Générer des divisions aléatoires </button>
 	<div class="bts">
