--- a/fractales.html
+++ b/fractales.html
@@ -26,11 +26,13 @@
 </head>
 
 <body>
-    <a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
-		double_arrow
-	</a>
-	<nav class="navbar"></nav>
-	<h1>Les jolies fractales</h1>
+	<div class="header">
+		<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
+			double_arrow
+		</a>
+		<h1>Les jolies fractales</h1>
+		<div class="fill"></div>
+	</div>
 
 	<button onclick="generer()" type="button"> Générer une fractale aléatoire </button>
 	<div class="insParent">
