--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 <body>
 	<h1>Le calcul mental, pour les pas très très forts</h1>
 	<p>Vous vous êtes toujours senti à la ramasse en calcul mental ? <br>Vous perdez du temps en DS à cause de vos
-		<u><i>piêtres</i></u> capacités calculatoires ? Ce site est fait pour vous !
+		<u><i>piêtres</i></u> capacités calculatoires ? Ce site est fait pour vous ! <br><br>
+		Choisissez simplement un type d'opération dans lequel vous souhaitez vous améliorer et commencez l'entraînement:
 	</p>
 	<div id="pages" class="pages">
 		<a href="additions.html">Addition</a>
@@ -25,9 +26,9 @@
 		<a href="Simplification.html">Simplifications d'expressions</a>
 		<a href="graphe.html">Graphes</a>
 		<a href="derivation.html">Dérivation </a>
-		<a href="primitive.html"> Primitive</a>
-		<a href="tests.html">Tests</a>
-		<a href="fractales.html"> Fractales !</a>
+		<a href="primitive.html">Primitive</a>
+		<!-- <a href="tests.html">Tests</a> -->
+		<a href="fractales.html"> Fractales</a>
 	</div>
 	<!-- <img src=photostress.jpg width=120px height=75px> -->
 	<br>
