--- a/soustractions.html
+++ b/soustractions.html
@@ -26,11 +26,13 @@
 </head>
 
 <body>
-	<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
-		double_arrow
-	</a>
-	<P></P>
-	<h1>Les soustractions</h1>
+	<div class="header">
+		<a id="homebtn" class="material-symbols-outlined homebtn" href="index.html" title="Retourner au menu">
+			double_arrow
+		</a>
+		<h1>Les soustractions</h1>
+		<div class="fill"></div>
+	</div>
 	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître votre résultat.</p>
 	<button onclick="generer()" type="button"> Générer des soustractions aléatoires </button>
 	<div class="bts">
