--- a/Additions.html
+++ b/Additions.html
@@ -33,11 +33,12 @@
 		<div class="fill"></div>
 	</div>
 
+	<p> Appuyez sur le bouton pour générer dix calculs. Cliquez ensuite sur le bouton "voir mon score" pour connaître
+		votre résultat.</p>
 	<button onclick="generer()" type="button"> Générer des additions aléatoires </button>
-
-	<div class="hide" id="bts">
-		<button onclick="left()">Scroll left</button>
-		<button onclick="right()">Scroll right</button>
+	<div class="bts">
+		<button onclick="left()">Calcul précédent</button>
+		<button onclick="right()">Calcul suivant</button>
 	</div>
 
 	<div class="insParent">
