Big changes ! Derivation.js now only displays the answer + little refactoring

--- a/derivation.html
+++ b/derivation.html
@@ -34,20 +34,20 @@
 		<div class="fill"></div>
 	</div>
 
-	<button onclick="generer()" type="button"> Générer des fonctions à chavirer</button>
-	<div class="btnsdiv">
+	<button onclick="generer()" type="button"> Générer des fonctions à dériver</button>
+	<!-- <div class="btnsdiv">
 		<button onclick="racine()" type="button" class="btns">Racine</button>
 		<button onclick="frac()" type="button" class="btns">Fraction</button>
 		<button onclick="expo()" type="button" class="btns">Exponentielle</button>
 		<button onclick="latex()" type="button" class="btns">Afficher le Latex</button>
-	</div>
+	</div> -->
 	<div class="insParent">
 		<div id="inserting">
 			<!-- ici viendront les additions -->
 		</div>
 	</div>
 
-	<button class="bouton" type="button" onclick="score()"> Voir son score </button>
+	<button class="bouton" type="button" onclick="solution()"> Voir la réponse</button>
 	<div id="score">
 		<!-- ici viendra le score -->
 	</div>
